tests/fail/int_at_beginning.stderr
error: Identifies cannot start with integers
 --> $DIR/int_at_beginning.rs:1:41
  |
1 | concat_idents::concat_idents!(fn_name = 1, foo, bar, {
  |                                         ^
